<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/m_configuracion"
        android:title="@string/m_configuracion"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_settings"
        />
    <item android:id="@+id/m_color"
        android:title="@string/m_color"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_color"
        />
    <item android:id="@+id/m_nuevo"
        android:title="@string/m_nuevo"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item android:id="@+id/m_cargar"
        android:title="@string/m_cargar"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
    <item android:id="@+id/m_guardar"
        android:title="@string/m_guardar"
        android:orderInCategory="100"
        app:showAsAction="never"
        />
</menu>
